--- a/testreact/src/components/layouts/carousels.css
+++ b/testreact/src/components/layouts/carousels.css
@@ -1,6 +1,6 @@
 .custom-caption {
     color: white;
-    font-family: 'Black Han Sans', sans-serif;
+    font-family: "Jua", sans-serif;
     font-size: 60px;
     text-align: center;
     /* width: 100%; */
