--- a/testreact/src/components/layouts/icon_brand.css
+++ b/testreact/src/components/layouts/icon_brand.css
@@ -6,7 +6,7 @@
     transform: scale(1.1); /* 호버 시 확대 */
   }
 
-  .logo-container {
+  .icon-container {
     margin-left: 0;  /* 왼쪽 여백 제거 */
     padding-left: 10px;  /* 필요 시 약간의 padding */
   }
