--- a/testreact/src/components/layouts/graph.css
+++ b/testreact/src/components/layouts/graph.css
@@ -23,9 +23,9 @@
     background-repeat: no-repeat; /* 반복 없이 */
 }
 
-.text-indroduce-image {
+.text-introduce-image {
     font-family: Noto Sans, sans-serif;
-    font-size: 20px;
+    font-size: 23px;
     padding-bottom: 100px;
 }
 
