--- a/testreact/src/components/layouts/graph.css
+++ b/testreact/src/components/layouts/graph.css
@@ -10,15 +10,19 @@
     /* background-color: #00acae; */
     background-color: #ffffff;
     font-family: Black Han Sans;
-    font-size: 100px;
+    font-size: 70px;
     display: inline-block;
     margin-bottom: 20px; /* 텍스트와 이미지 사이의 간격 조정 */
 }
 
+.text_origin {
+    font-family: Noto Sans;
+}
+
 .graph-image {
     padding-top: 70px;
-    padding-bottom: 150px;
-    width: auto;
+    padding-bottom: 50px;
+    width: 25%;
     height: auto;
     background-size: contain; /* 이미지 크기를 맞춤 */
     background-repeat: no-repeat; /* 반복 없이 */
@@ -26,7 +30,7 @@
 
 .text-introduce-image {
     font-family: Noto Sans, sans-serif;
-    font-size: 30px;
+    font-size: 27px;
     padding-bottom: 100px;
 }
 
@@ -35,3 +39,5 @@
     font-family: Black Han Sans;
     font-size: 45px;
 }
+
+
