--- a/testreact/src/components/layouts/itsok_banner.css
+++ b/testreact/src/components/layouts/itsok_banner.css
@@ -1,5 +1,6 @@
 .itsok_banner_text {
     padding-top: 30px !important;
+    padding-bottom: 0%;
     font-size: 70px;
     font-family: Black Han Sans;
 }
