--- a/testreact/src/components/layouts/itsok_banner.css
+++ b/testreact/src/components/layouts/itsok_banner.css
@@ -1,6 +1,14 @@
 .itsok_banner_text {
-    padding-top: 30px !important;
-    padding-bottom: 0%;
+    padding-top: 30px;
     font-size: 70px;
     font-family: Black Han Sans;
+}
+
+.itsok_banner_img {
+    text-align: center; /* 이미지를 가운데로 정렬 */
+}
+
+.responsive-image {
+    width: 15%; /* 부모 요소의 너비에 맞춰 조정 */
+    height: auto; /* 비율을 유지하며 크기 조정 */
 }
