campaign component update

--- a/testreact/src/components/layouts/graph_trash.css
+++ b/testreact/src/components/layouts/graph_trash.css
@@ -37,6 +37,14 @@
     color: aliceblue;
     font-size: 27px;
     padding-top: 10px;
+    padding-bottom: 100px;
+}
+
+.graphtrash_introduce_text_02 {
+    font-family: Noto Sans;
+    color: aliceblue;
+    font-size: 27px;
+    padding-top: 10px;
     padding-bottom: 40px;
 }
 
