--- a/testreact/src/components/layouts/campaign_images.css
+++ b/testreact/src/components/layouts/campaign_images.css
@@ -9,12 +9,24 @@
 
 /* 제목(h2) 스타일 */
 .campaign-title {
-  font-size: 80px;
+  font-size: 70px;
   font-family: Black han sans;
   color: white; /* 진한 회색 */
   text-align: center;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
-  padding-top: 35px;
+  padding-top: 70px;
+}
+
+/* 제목 강조부분 색상 하이라이트 */
+.campaign-title-highlight {
+  color: #00acae;
+  font-size: 90px;
+}
+
+.text-center-campaign-subtext {
+  color: white;
+  font-family: NotoSans;
+  font-size: 20px;
 }
 
 /* 이미지 컨테이너 스타일 */
@@ -28,7 +40,7 @@
 
 /* 이미지 스타일 */
 .campaign-image {
-  border: 2px solid #ddd;
+  padding-top: 20px;
   border-radius: 10px;
   transition: transform 0.3s ease; /* 이미지 확대 효과 */
 }
@@ -43,6 +55,7 @@
 }
 
 .campaign-button {
+  margin: 15px; /*버튼사이의 공백*/
   background-color: #00acae !important;
   border: none !important;
   border-radius: 30px !important;
