HomeIntroduce banner color update

--- a/testreact/src/components/layouts/HomeIntroduce.css
+++ b/testreact/src/components/layouts/HomeIntroduce.css
@@ -93,7 +93,7 @@
 
 /* 이미지 카드 섹션 배경 색상 추가 */
 .content-container.creators {
-    background-color: #001F3F; /* 진한 남색 */
+    background-color: #001a33; /* 진한 남색 */
 }
 
 .image-cards {
