--- a/testreact/src/components/layouts/HomeIntroduce.css
+++ b/testreact/src/components/layouts/HomeIntroduce.css
@@ -75,11 +75,12 @@
 
 /* 새로운 제목 색상 스타일 */
 .we-do-title {
-    font-size: 28px;
-    font-weight: 800;
+    font-family: 'Noto Sans', sans-serif; /* 폰트 변경 */
+    font-size: 60px;
+    font-weight: 900;
     color: green; 
     margin-bottom: 30px;
-    text-align: center; /* 제목을 왼쪽 정렬 */
+    text-align: center; /* 제목을 중앙 정렬 */
 }
 
 
@@ -94,7 +95,7 @@
 
 /* 이미지 카드 섹션 배경 색상 추가 */
 .content-container.creators {
-    background-color: #8df88d; 
+    background-color: #1f4516; 
 }
 
 /* 이미지 카드 섹션 스타일 */
