--- a/testreact/src/components/layouts/HomeIntroduce.css
+++ b/testreact/src/components/layouts/HomeIntroduce.css
@@ -10,7 +10,7 @@
 .banner {
     position: relative;
     text-align: center;
-    height: 50vh;
+    height: 30vh;
     width: 100vw;
     overflow: hidden;
     margin: 0;
@@ -19,9 +19,11 @@
 .banner-image {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: cover;  /* 기존과 동일: 이미지가 배너를 꽉 채움 */
+    object-position: top 20%; /* 이미지가 위에서부터 잘리도록 조정 */
     filter: brightness(70%);
 }
+
 
 .banner-title {
     position: absolute;
@@ -29,7 +31,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color: #fff;
-    font-size: 48px;
+    font-size: 60px;
     font-weight: 700;
 }
 
@@ -75,12 +77,13 @@
 
 /* 새로운 제목 색상 스타일 */
 .we-do-title {
-    font-family: 'Noto Sans', sans-serif; /* 폰트 변경 */
+    font-family: 'Noto Sans', sans-serif; 
     font-size: 60px;
     font-weight: 900;
-    color: green; 
-    margin-bottom: 30px;
-    text-align: center; /* 제목을 중앙 정렬 */
+    color: green;
+    margin-top: 60px;  /* 상단 여백 추가 */
+    margin-bottom: 80px;  /* 하단 여백 확장 */
+    text-align: center;
 }
 
 
