challenge_introduce_sectionbottom position update

--- a/testreact/src/components/layouts/HomeIntroduce.css
+++ b/testreact/src/components/layouts/HomeIntroduce.css
@@ -10,7 +10,7 @@
 .banner {
     position: relative;
     text-align: center;
-    height: 50vh;
+    height: 500px;
     width: 100vw;
     overflow: hidden;
     margin: 0;
