--- a/src/components/layouts/pages/news.css
+++ b/src/components/layouts/pages/news.css
@@ -57,13 +57,13 @@
 
 }
 
-.carousel-container {
+.news_carousel_container {
     max-width: 600px; /* Carousel의 최대 너비 설정 */
     max-height: 300px;
     margin: 0 auto; /* 중앙 정렬 */
 }
 
-.carousel-container img {
+.news_carousel_container img {
     width: 100%; /* 이미지가 Carousel 너비에 맞춰지도록 설정 */
     height: auto; /* 이미지 비율 유지 */
 }
