--- a/src/components/layouts/pages/news.css
+++ b/src/components/layouts/pages/news.css
@@ -56,7 +56,15 @@
     color: black;
     padding-top: 40px;
     padding-bottom: 5px;
+}
 
+.list_news {
+    font-family: Noto Sans;
+    font-weight: 900;
+    font-size: 40px;
+    color: black;
+    padding-top: 130px;
+    padding-bottom: 10px;
 }
 
 .news_carousel_container {
@@ -74,4 +82,37 @@
 .news_carousel_container iframe {
     width: 100%; /* 부모 요소의 너비에 맞춤 */
     height: 100%; /* 부모 요소의 높이에 맞춤 */
+}
+
+
+/* 리스트 */
+.news-list {
+    width: 1400px; /* 전체 리스트 너비 */
+    margin: 20px auto;
+    padding: 20px;
+    border-top: 1px solid #ccc;
+}
+
+.news-item {
+    padding: 15px 0;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+.news-title {
+    font-size: 25px;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 8px;
+}
+
+.news-date {
+    font-size: 14px;
+    color: #777;
+    margin-bottom: 8px;
+}
+
+.news-summary {
+    font-size: 15px;
+    color: #555;
+    line-height: 1.5;
 }
