--- a/src/components/layouts/pages/news.css
+++ b/src/components/layouts/pages/news.css
@@ -1,16 +1,10 @@
-.white_line {
-    padding-top: 50px;
-    background-color: #f8f9fa
-    ;
-}
-
 .banner-container {
     position: relative;
     display: flex;
     justify-content: center; /* 가로 중앙 정렬 */
     align-items: center; /* 세로 중앙 정렬 */
     flex-direction: column; /* 텍스트와 이미지를 세로로 배치 */
-    background-color: #033075
+    background-color: black
     ;
 }
 
