--- a/src/components/layouts/pages/news.css
+++ b/src/components/layouts/pages/news.css
@@ -9,8 +9,8 @@
     font-weight: 800;
     font-size: 35px;
     text-align: center;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 80px;
+    padding-bottom: 80px;
 }
 
 .newsbanner_title_text {
@@ -58,7 +58,8 @@
     font-family: Noto Sans;
     font-weight: 900;
     font-size: 50px;
-    color: black;
+    background-color: rgb(0, 0, 0);
+    color: white;
     padding-top: 120px;
     padding-bottom: 50px;
 }
@@ -68,20 +69,25 @@
     font-weight: 900;
     font-size: 60px;
     color: black;
-    padding-top: 200px;
+    padding-top: 150px;
     padding-bottom: 10px;
+}
+
+.news_carousel_background {
+    background-color: black;
 }
 
 .news_carousel_container {
     max-width: 1500px; /* Carousel의 최대 너비 */
-    max-height: 700px; /* Carousel의 최대 높이 */
+    max-height: auto; /* Carousel의 최대 높이 */
     margin: 0 auto; /* 중앙 정렬 */
     overflow: hidden; /* 부모 요소를 넘어가는 내용 숨기기 */
+    padding-bottom: 120px;
 }
 
 .news_carousel_container .carousel-item {
     width: 100%; /* 슬라이드 너비 100% */
-    height: 700px; /* 슬라이드 높이를 명시적으로 300px로 설정 */
+    height: 750px; /* 슬라이드 높이를 명시적으로 300px로 설정 */
 }
 
 .news_carousel_container iframe {
